<resources>
    <string name="app_name">Wise PDF Reader</string>
    <string name="open_file">open PDF</string>
    <string name="title_activity_settings">Settings</string>

    <string name="rotation_option">Auto-rotate</string>
    <string name="auto_rotate_switch">Auto-rotate reader</string>
    <string name="auto_rotate_switch_summary">Change reader orientation when device is rotated</string>

    <string name="fit_zoom_option">Document Fit and Zoom</string>
    <string name="fit_switch">Fit device width</string>

    <string name="support_credits_option">Help and Credits</string>
    <string name="help_pref">Help</string>
    <string name="credits_pref">About</string>
</resources>
